[gd_scene load_steps=9 format=3 uid="uid://cdoksexcakmop"]

[ext_resource type="PackedScene" uid="uid://y5a4e3ajuy2r" path="res://scenes/StonePlatform.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://datfp8kxjrjg" path="res://scenes/BlueShip.tscn" id="2"]
[ext_resource type="Script" path="res://scenes/PlatformBlue.gd" id="3"]
[ext_resource type="Script" path="res://scenes/ObjectiveArea.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://cyu31awolixii" path="res://assets/kindpng_1725259.png" id="5_pe6ko"]
[ext_resource type="Texture2D" uid="uid://d2uof8cdoe3lv" path="res://assets/Clouds 6/1.png" id="6_ahxv2"]
[ext_resource type="Texture2D" uid="uid://bk0s3qdy4r1ra" path="res://assets/Clouds 6/4.png" id="7_uty5s"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(138.75, 79)

[node name="MainLevel" type="Node"]

[node name="Background" type="Node2D" parent="."]

[node name="Sky" type="Sprite2D" parent="Background"]
z_index = -1
position = Vector2(594.5, 324)
scale = Vector2(2.17188, 2.41358)
texture = ExtResource("6_ahxv2")

[node name="Cloud" type="Sprite2D" parent="Background"]
z_index = -1
position = Vector2(592, 312.25)
scale = Vector2(2.27083, 2.52006)
texture = ExtResource("7_uty5s")

[node name="PlatformBlue" type="Node2D" parent="."]
position = Vector2(35, 565)
script = ExtResource("3")

[node name="StonePlatform" parent="PlatformBlue" instance=ExtResource("1")]

[node name="StonePlatform2" parent="PlatformBlue" instance=ExtResource("1")]
position = Vector2(70, 0)

[node name="BlueShip" parent="." instance=ExtResource("2")]
position = Vector2(72.7009, 421.901)
lock_rotation = true

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource("4")

[node name="Timer" type="Timer" parent="ObjectiveArea"]
wait_time = 2.0
one_shot = true

[node name="YouWin" type="Sprite2D" parent="ObjectiveArea"]
visible = false
position = Vector2(591, 320)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_pe6ko")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2(70.625, 40)
shape = SubResource("1")

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_body_entered"]
[connection signal="timeout" from="ObjectiveArea/Timer" to="ObjectiveArea" method="_on_timer_timeout"]
